# net_7_qt_airports

./: CMakeLists.txt  airports.cpp  airports.h  database.cpp  database.h  dialog_db.cpp  dialog_db.h  dialog_db.ui  dialog_stats.cpp  dialog_stats.h  dialog_stats.ui  mainwindow.cpp  mainwindow.h  mainwindow.ui
